chore: Add pip for component unit tests (#63)
- YODA component unit tests fail without pip in uv venv

Signed-off-by: Giulio Frasca <gfrasca@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ test = [
     "docstring-parser",
     "jinja2",
     "semver",
+    "pip",
 ]
 # Local development (extends test with additional tools)
 dev = [
