fix: address compile-check follow-up review
- extend compile-and-deps workflow paths to cover scripts/lib changes

- import packaging.SpecifierSet directly, tighten metadata type hints, and list packaging in test extras

Signed-off-by: sduvvuri1603 <sduvvuri@redhat.com>

--- a/.github/workflows/compile-and-deps.yml
+++ b/.github/workflows/compile-and-deps.yml
@@ -9,6 +9,7 @@ on:
       - 'components/**'
       - 'pipelines/**'
       - 'scripts/compile_check/**'
+      - 'scripts/lib/**'
       - '.github/workflows/compile-and-deps.yml'
       - '.github/actions/setup-python-ci/**'
       - 'pyproject.toml'
